calculate given ids value and test; fix openapi schema issues
